--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
+inicio:
+    resource: "@InicioBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 blog:
     resource: "@BlogBundle/Resources/config/routing.yml"
     prefix:   /
