--- a/app/config/routing_dev.yml
+++ b/app/config/routing_dev.yml
@@ -16,3 +16,6 @@ _main:
 # AcmeDemoBundle routes (to be removed)
 _acme_demo:
     resource: "@AcmeDemoBundle/Resources/config/routing.yml"
+
+_blog:
+    resource: "@BlogBundle/Resources/config/routing.yml"
