--- a/src/Blog/BlogBundle/Resources/config/routing.yml
+++ b/src/Blog/BlogBundle/Resources/config/routing.yml
@@ -1,3 +1,4 @@
-blog_homepage:
-    pattern:  /hello/{name}
-    defaults: { _controller: BlogBundle:Default:index }
+_blog:
+    pattern:  /inicio
+    defaults: { _controller: BlogBundle:Default:inicio }
+
